# contour

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
backend/: fal_stylize.py  gemini_client.py  main.py  terrain.py
frontend/: app.js  index.html  style.css  voice.js
frontend/modules/: building-renderer.js  landmark-loader.js  osm-buildings.js
frontend/presets/: city-presets.js  combined-presets.js  landmark-presets.js  terrain-presets.js
